--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,16 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+
+    "baseUrl": "./",
+    "paths": {
+      "@auth/*": ["./src/app/auth/*"],
+      "@products/*": ["./src/app/products/*"],
+      "@shared/*": ["./src/app/shared/*"],
+      "@store/*": ["./src/app/store/*"],
+      "@admin/*": ["./src/app/admin/*"],
+      "@utils/*": ["./src/app/utils/*"],
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
